--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.51.15",
+    "@tanstack/react-query": "^5.51.21",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.7.2",
     "cross-env": "^7.0.3",
